# omniglot

./: .gitignore  AUTHORS.md  Cargo.toml  README.md  build.rs  flake.nix  treefmt.nix
.github/workflows/: nix-flake-checks.yml
examples/add/: Cargo.toml  build.rs  libadd.omniglot.toml
examples/add/libadd/: .gitignore
examples/add/src/: main.rs
omniglot/: Cargo.toml  build.rs
omniglot/src/: alloc_tracker.rs  bit_pattern_validate.rs  lib.rs  markers.rs  maybe_valid.rs
omniglot/src/abi/: calling_convention.rs  mod.rs  rv32i_c.rs  sysv_amd64.rs
omniglot/src/foreign_memory/: mod.rs  og_copy.rs  og_mut_ref.rs  og_mut_slice.rs  og_ref.rs  og_ret.rs  og_slice.rs  og_slice_val.rs  og_val.rs
omniglot/src/id/: lifetime.rs  mod.rs  runtime.rs
omniglot/src/rt/: mod.rs  rv32i_c.rs  sysv_amd64.rs
omniglot/src/rt/mock/: heap_alloc.rs  mod.rs  stack_alloc.rs
omniglot/src/util/: as_ref_unchecked.rs  maybe_uninit_as_bytes.rs  mod.rs
src/: bit_pattern_validate.rs  id.rs  lib.rs  markers.rs  types.rs
src/abi/: calling_convention.rs
src/foreign_memory/: mod.rs  og_mut_ref.rs  og_ref.rs  og_val.rs
src/id/: mod.rs
src/rt/: mod.rs  rv32i_c.rs  sysv_amd64.rs
src/rt/mock/: mod.rs
