[workspace]
resolver = "3"
members = [
   "omniglot",
   "examples/*",
]

[workspace.metadata.crane]
name = "omniglot-workspace"

[workspace.package]
version = "0.1.0"
authors = [ "Leon Schuermann <leon@is.currently.online>" ]
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies.bindgen]
# Used within crates in examples/*:
git = "https://github.com/omniglot-rs/rust-bindgen"
rev = "fffcf97244fc77c2cfa8d2290d740385f18021f1"
# path = "../rust-bindgen/bindgen"
