[workspace]
resolver = "3"
members = [
   "omniglot",
   "examples/*",
]

[workspace.metadata.crane]
name = "omniglot-workspace"

[workspace.package]
version = "0.1.0"
authors = [ "Leon Schuermann <leon@is.currently.online>" ]
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies.bindgen]
# Used within crates in examples/*:
git = "https://github.com/omniglot-rs/rust-bindgen"
rev = "8c5d80549c02cd57905ced1e6b8ecebe2d92c7f5"
# path = "../rust-bindgen/bindgen"
